Polish translation update (small, hopefully more soon!)

--- a/src/freenet/l10n/freenet.l10n.pl.properties
+++ b/src/freenet/l10n/freenet.l10n.pl.properties
@@ -33,8 +33,24 @@ FProxyToadlet.welcomeTitle=Główna
 LocalFileInsertToadlet.fileHeader=Plik
 N2NTMToadlet.delayedTitle=Opuźnione
 N2NTMToadlet.friends=Znajomi
+Node.clientCacheSize=Wielkość pamięci podręcznej klienta (dopuszczalne: bajty, MB, GB itd)
+Node.clientCacheSizeLong=Maksymalna wielkość pamięci podręcznej klienta. Jest to bufor używany do zapamiętywania stron freenetu już które odwiedziłeś, w związku z tym nie będą musiały być ponownie wczytywane następnym razem, dlatego będą wczytywane szybciej i nie będzie to widoczne w sieci. Jeżeli typ bufora klienta ustawiony jest na  "none", ta opcja będzie ignorowana; jeżeli na "ram", będzie to ilość pamięci RAM użytej na bufor (czyli części pamięci ustawionej przez "maksymalny limit pamięci" , więc może zajść potrzeba zwiększenia limitu całkowitego); jeśli typ jest ustawiony na "salt-hash", będzie to wielkość bufora klienta zapisana na dysku.
+Node.defragDatabaseOnStartup=Czy defragmentować ( scalać ) bazę danych pobrań podczas następnego uruchomienia?
+Node.defragDatabaseOnStartupLong=Jeśli ustawimy na TRUE, to podczas następnego uruchomienia programu będzie przeprowadzona defragmentacja magazynu danych (lub po wprowadzeniu hasła).
+Node.defragOnce=Defragmentowanie jednokrotne (opcja wyżej musi być ustawiona)
+Node.defragOnceLong=Jeśli ta i opcja wyżej będzie ustawiona na TRUE, podczas następnego uruchomienia zostanie przeprowadzona defragmentacja a nastepnie opcja defragmentacji zostanie wyłączona.
+Node.inBWLimit=Limit prędkości pobierania.
+Node.inBWLimitLong=Freenet będzie się starał nie przekraczać tego limitu, jednak nie będzie to bardzo precyzyjne. Jeśli wpiszemy wartość -1 prędkość pobierania będzie wynosiła 4x limit wysyłania. Bez podania jednostek przyjmuje się bajty/sekundę. Jednostki SI i IEC są akceptowane, czyli przykładowo podając 10 KiB/s lub 1.5 mbps, oznacza odpowiednio 10 kilobajtów/sek i 1.5 megabajtów/sek.
 Node.l10nLanguage=Język węzła w którym będą wyświetlane komunikaty
 Node.l10nLanguageLong=Ta opcja zmieni język w którym będą wyświetlane komunikaty. Weż pod uwagę, że niektóre napisy zmienią się dopiero po przeładowaniu węzła.
+Node.nodeName=Pseudonim dla tego węzła Freenet-u.
+Node.nodeNameLong=Pseudonim węzła. Będzie widoczny jedynie dla twoich przyjaciół.
+Node.outBWLimit=Limit prędkości wysyłania.
+Node.outBWLimitLong=Sztywny limit prędkości wysyłania. Freenet będzie pilnował by go nie przekroczyć. Zazwyczaj nie powinno się przekraczać połowy maksymalnej prędkości wysyłania twojego łącza, która jest zwykle wiele mniejsza niż możliwości wysyłania. Bez podania jednostek przyjmuje się bajty/sekundę. Jednostki SI i IEC są akceptowane, czyli przykładowo podając 10 KiB/s lub 1.5 mbps, oznacza odpowiednio 10 kilobajtów/sek i 1.5 megabajtów/sek.
+Node.slashdotCacheSize=Wielkość bufora na ostatnio wykonane pobierania (dopuszczalne: bajty, KB, MB, GB, TB, itd)
+Node.slashdotCacheSizeLong=Maksymalna wielkość bufora na pobrania wykonane w ostatnim czasie. (dodatkowo istnieje również limit czasowy).
+Node.storeSize=Wielkość magazynu danych (dopuszczalne: bajty, MB, GB, TB ...)
+Node.storeSizeLong=Wielkość magazynu danych, który zawiera magazyn i pamięć podręczną ( cache ), w którym zapamiętywane są dane przechodzące przez ten węzeł. Freenet używa dysku do wielu rzeczy, takich jak pliki tymczasowe i twoje pobierania, które są zapisywane osobno.
 NodeUpdateManager.installNewVersions=Automatycznie zainstalować nową wersję?
 PluginToadlet.failedToLoadPlugin=Nie udało się załadować wtyczki.
 PluginToadlet.pluginListTitle=Lista wtyczek
@@ -45,9 +61,9 @@ PproxyToadlet.noPlugins=Nie załadowano żadnych wtyczek
 PproxyToadlet.plugins=Wtyczki
 PproxyToadlet.startedAtTitle=Uruchomiona o
 QueueToadlet.errorInvalidURI=Błędny URI
+QueueToadlet.failedToRemove=Usunięcie ${id} nie udało się: ${message}
 QueueToadlet.failedToRemoveId=Usunięcie ${id} nie powiodło się
 QueueToadlet.failedToRemoveRequest=Usunięcie żądania nie powiodło się
-QueueToadlet.failedToRemove=Usunięcie ${id} nie udało się: ${message}
 QueueToadlet.failedToRestart=Ponowienie ${id} nie powiodło się
 QueueToadlet.failedToRestartRequest=Wznowienie żądania nie powiodło się
 QueueToadlet.fileName=Nazwa pliku
@@ -59,10 +75,11 @@ QueueToadlet.persistenceForever=na zawsze
 QueueToadlet.reason=Powód
 QueueToadlet.totalSize=Pełna wielkość
 QueueToadlet.unknown=Nieznany
+SecurityLevels.physicalThreatLevelSwapfile=Poza tym, jeśli to możliwe, powinieneś zaszyfrować plik/partycje wymiany (jest to tymczasowe miejsce na dane używane przez system ${operatingSystem} gdy skończy się pamięć). Powinno być to prostsze niż szyfrowanie całego dysku.
+SecurityLevels.statusBarPrefix=Poziomy bezpieczeństwa:
 SimpleToadletServer.advancedMode=Uaktywnić tryb zaawansowany?
 StatisticsToadlet.bandwidthTitle=Pasmo
 StatisticsToadlet.versionTitle=Numer wersji węzła
-testing.test=testpl${test1}testpl${test2}testpl
 TextModeClientInterfaceServer.allowedHosts=Osiągalne hosty
 TextModeClientInterfaceServer.telnetPortNumberLong=numer portu Telnetu
 Toadlet.returnToPrevPage=Wróć do strony poprzedniej
@@ -70,4 +87,7 @@ WelcomeToadlet.fetchKeyLabel=Pobierz klucz
 WelcomeToadlet.homepageFullTitleWithName=Główna strona FProxy
 WelcomeToadlet.privateKeyHeader=Klucz prywatny
 WelcomeToadlet.publicKeyHeader=Klucz publiczny
+WrapperConfig.wrapper.java.maxmemory.long=Ustanawia limit pamięci używanej przez Freenet. Freenet potrzebuje więcej pamięci jeżeli zakolejkujemy więcej pobierań, lub używamy forum lub innych wtyczek, a także w mniejszym stopniu jeśli ustawimy duży magazyn danych (datastore) lub szybkie łącze. Zmiany zadziałają po ponownym uruchomieniu Freenet.
+WrapperConfig.wrapper.java.maxmemory.short=Maksymalne użycie pamięci. ( w megabajtach )
+testing.test=testpl${test1}testpl${test2}testpl
 End
