"Always load plugins from central server" should default to false, even if we have security level low. An eavesdropper may be able to identify which plugin is being loaded (e.g. by the size of the data transferred) and correlate it with identity creation. (This is apart from the obvious fact that it indicates somebody is running a node).

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1320,8 +1320,8 @@ PluginJarUpdater.pluginUpdatedText=Click below to update to the latest version (
 PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is available!
 PluginJarUpdater.updatePlugin=Update plugin after final security checks
 PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update system has not been compromised.
-PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web?
-PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, we will always load plugins over the web, and not try to fetch them from Freenet. The plugins will be downloaded from our central web server via SSL, the SSL certificate is bundled with your Freenet node. Therefore, downloading from the web will gurantee the integrity of the files and will be faster than from Freenet, but it will not be anonymous - if you don't want anyone to know that you run Freenet, disable this.
+PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web? (NOT RECOMMENDED!)
+PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, always download plugins over the web from our web server rather than over Freenet. This is more reliable but dangerous: While we use SSL, wiretappers may still be able to identify which plugin you download, and correlate it with when a new identity is created e.g. on Freemail;  certainly they could tell you use Freenet. 
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
 PluginManager.deleteFailedPluginButton=Don't try again on next startup
 PluginManager.fallbackFromFreenetLoadToCentralServer=If an official plugin load over Freenet fails, load it from the central server?
