Only one HTTPS warning. But make it red on darknet.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1413,8 +1413,7 @@ PproxyToadlet.pluginNotFoundUpdating=The plugin you are trying to update isn't l
 PproxyToadlet.pluginSourceChoice=You can either fetch the plugin over Freenet or from our central servers:
 PproxyToadlet.pluginSourceFreenet=Fetch over Freenet. This is untraceable, safe, and may be slow.
 PproxyToadlet.pluginSourceHTTPS=Fetch over the web from our central servers.
-PproxyToadlet.pluginSourceHTTPSWarningDarknet=WARNING: This will give away the fact that you are running Freenet, and won't work if our website is blocked!
-PproxyToadlet.pluginSourceHTTPSWarning=This may be a bit faster, but is traceable and won't work if our website is blocked. Only use it if loading plugins over Freenet consistently fails.
+PproxyToadlet.pluginSourceHTTPSWarning=WARNING: This will give away the fact that you are running Freenet, and won't work if our website is blocked! It may even be possible for a wiretapper to tell what you are trying to load, and thus connect it with when e.g. a Freemail identity was created.
 PproxyToadlet.pluginUnloaded=Plugin unloaded
 PproxyToadlet.pluginUnloadedWithName=The plugin ${name} has been unloaded.
 PproxyToadlet.plugins=Plugins
