--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -716,7 +716,7 @@ FetchException.longError.28=Some of the data was found, but not enough to fetch 
 FetchException.longError.29=Wrong content type: The key was not in the list of allowed content types provided by the client
 FetchException.longError.2=Don't know what to do with splitfile
 FetchException.longError.30=The request was terminated by a node because it had recently received a request for the same key and that request had failed
-FetchException.longError.31=The content filter tried to make the data safe but failed
+FetchException.longError.31=Pages/files of this type are usually filtered by Freenet, making them safe. This page appears to be either malicious or corrupt, so the filter can't make it safe. You can open the file anyway but it won't be filtered, so it may give your IP address away. Details of why we are unable to filter the file may follow
 FetchException.longError.32=The data is of an unknown type which might be dangerous
 FetchException.longError.33=The data is of a type known to be dangerous, so the content filter has stopped the request
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
