Improve the open anyway link

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -630,7 +630,7 @@ FProxyToadlet.notEnoughMetaStrings=Not enough meta-strings
 FProxyToadlet.notFoundTitle=Not Found
 FProxyToadlet.openAsText=${link}Click here${/link} to open the file as plain text (this should not be dangerous but it may be garbled).
 FProxyToadlet.openAsThawIndex=${link}Click here${/link} to open the file with thaw index browser (read warning above!).
-FProxyToadlet.openForce=${link}Click here${/link} to open the file as ${mime} (read warning above!).
+FProxyToadlet.openForce=${link}Click here${/link} to open the file as ${mime} without filtering (this may not be safe, read the warning above!).
 FProxyToadlet.openForceDisk=${link}Click here${/link} to force your browser to download the file to disk.
 FProxyToadlet.openPossRSSForceDisk=${link}Click here${/link} to try to force your browser to download the file to disk (this ${bold}this may also be dangerous${/bold} if you run Firefox 2.0.0, 2.0.1 should fix this).
 FProxyToadlet.openPossRSSAsPlainText=${link}Click here${/link} to open the file as plain text (this ${bold}may be dangerous${/bold} if you are running IE7 or FF2).
