--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -630,7 +630,7 @@ FProxyToadlet.notEnoughMetaStrings=Not enough meta-strings
 FProxyToadlet.notFoundTitle=Not Found
 FProxyToadlet.openAsText=${link}Click here${/link} to open the file as plain text (this should not be dangerous but it may be garbled).
 FProxyToadlet.openAsThawIndex=${link}Click here${/link} to open the file with thaw index browser (read warning above!).
-FProxyToadlet.openForce=${link}Click here${/link} to open the file as ${mime} without filtering (this may not be safe, read the warning above!).
+FProxyToadlet.openForce=${link}Click here${/link} to open the file as ${mime} without filtering (NOT RECOMMENDED: read the warning above!).
 FProxyToadlet.openForceDisk=${link}Click here${/link} to force your browser to download the file to disk.
 FProxyToadlet.openPossRSSForceDisk=${link}Click here${/link} to try to force your browser to download the file to disk (this ${bold}this may also be dangerous${/bold} if you run Firefox 2.0.0, 2.0.1 should fix this).
 FProxyToadlet.openPossRSSAsPlainText=${link}Click here${/link} to open the file as plain text (this ${bold}may be dangerous${/bold} if you are running IE7 or FF2).
@@ -716,7 +716,7 @@ FetchException.longError.28=Some of the data was found, but not enough to fetch 
 FetchException.longError.29=Wrong content type: The key was not in the list of allowed content types provided by the client
 FetchException.longError.2=Don't know what to do with splitfile
 FetchException.longError.30=The request was terminated by a node because it had recently received a request for the same key and that request had failed
-FetchException.longError.31=Pages/files of this type are usually filtered by Freenet, making them safe. This page appears to be either malicious or corrupt, so the filter can't make it safe. You can open the file anyway but it won't be filtered, so it may give your IP address away. Details of why we are unable to filter the file may follow
+FetchException.longError.31=The page (or file) appears to be corrupt, but might be dangerous; you should not open this page unless you know what you are doing. Normally Freenet can filter pages of this type, but this page is so broken that we are unable to make it safe. If you open it anyway it won't be filtered, so it may give away your IP address.
 FetchException.longError.32=The data is of an unknown type which might be dangerous
 FetchException.longError.33=The data is of a type known to be dangerous, so the content filter has stopped the request
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
@@ -798,7 +798,7 @@ GenericReadFilterCallback.malformedRelativeURL=Malformed URL (relative): ${error
 GenericReadFilterCallback.protocolNotEscaped=Not an escaped protocol: ${protocol}
 HTMLFilter.couldNotParseStyle=Could not match input style
 HTMLFilter.deletedUnknownStyle=deleted unknown style
-HTMLFilter.failedToParseLabel=The HTML filter failed to parse the page
+HTMLFilter.failedToParseLabel=Corrupt or malicious web page (unable to filter the page)!
 HTMLFilter.invalidMetaType=Invalid content type in meta tag, not a known HTML format.
 HTMLFilter.metaOutsideHead=<meta> tag outside <head>. This is not allowed as it is invalid and assuming it doesn't happen speeds up charset detection.
 HTMLFilter.multipleCharsetsInMeta=Multiple <meta> charset declarations. This is confusing, invalid, unsafe and not allowed.
