Separate explanation of why we think it's corrupt, make it clear that no matter how trivial it is it won't make the page safe.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -765,6 +765,7 @@ FetchException.shortError.6=Block decode error
 FetchException.shortError.7=Too many metadata levels
 FetchException.shortError.8=Too many archive restarts
 FetchException.shortError.9=Too much recursion
+FetchException.unsafeContentDetails=If you are the original author of the file, you may be interested in the details of why we think it is corrupt (but no matter how trivial this is, it does NOT make the file safe!):
 FileOffer.askUserTitle=Direct file transfer
 FileOffer.offeredFileHeader=The node ${name} has offered a file:
 FileOffer.offeredFileShort=Your friend ${node} has offered the file ${filename}.
