Better intro message for content filter errors. We have been able to actually fetch the file; we just can't guarantee its safety.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -665,6 +665,7 @@ FProxyToadlet.stats=Detailed statistics about your Freenet node
 FProxyToadlet.statsTitle=Statistics
 FProxyToadlet.timeElapsedLabel=Time elapsed:
 FProxyToadlet.unableToRetrieve=Freenet was unable to retrieve this file.
+FProxyToadlet.unableToSafelyDisplay=Freenet cannot guarantee that this file is safe: it may cause your browser to give away your IP address!
 FProxyToadlet.unknownMIMEType=Content type: unknown
 FProxyToadlet.welcome=Browse and search Freesites, web sites hosted anonymously on Freenet
 FProxyToadlet.welcomeTitle=Browse Freenet
