--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -802,7 +802,7 @@ HTMLFilter.couldNotParseStyle=Could not match input style
 HTMLFilter.deletedUnknownStyle=deleted unknown style
 HTMLFilter.failedToParseLabel=Corrupt or malicious web page (unable to filter the page)!
 HTMLFilter.invalidMetaType=Invalid content type in meta tag, not a known HTML format.
-HTMLFilter.metaOutsideHead=<meta> tag outside <head>. This is not allowed as it is invalid and assuming it doesn't happen speeds up charset detection.
+HTMLFilter.metaOutsideHead=<meta> tag outside <head>. This is not allowed and can cause problems with different character sets / languages.
 HTMLFilter.multipleCharsetsInMeta=Multiple <meta> charset declarations. This is confusing, invalid, unsafe and not allowed.
 HTMLFilter.textBeforeHTML=Invalid HTML document: Text before <html> tag. We only allow valid HTML documents and not fragments because this makes for more reliable filtering (particularly avoiding charset ambiguity).
 HTMLFilter.tooManyNestedStyleOrScriptTags=Too many nested style or script tags - ambiguous or invalid parsing
