Add new probe type to get output capacity usage and very truncated bandwidth limit [ cleaned up history ]

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1066,6 +1066,8 @@ Node.probeLinkLengthsShort=Respond to probe requests for link lengths
 Node.probeLinkLengthsLong=If true Freenet will respond to probe requests for link lengths. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
 Node.probeLocationShort=Respond to probe requests for location
 Node.probeLocationLong=If true Freenet will respond to probe requests for low-precision location. This is to allow measurement of the network location distribution, and contains no information other than location. If false it will respond with a refusal.
+Node.respondOverallBulkOutputCapacityUsage=Respond to probe requests for overall capacity usage and very approximate bandwidth limit
+Node.respondOverallBulkOutputCapacityUsageLong=If true Freenet will respond to probe requests for the overall capacity usage (bandwidth liability, this is a guesstimate of how much bandwidth would be used if all running requests succeeded), and a rough idea of the bandwidth limit (as an integer, divided by 10KB/sec, min 1 max 10).
 Node.probeStoreSizeShort=Respond to probe requests for store size
 Node.probeStoreSizeLong=If true freenet will respond to probe requests for store size. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
 Node.probeUptimeShort=Respond to probe requests for uptime
