--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -596,6 +596,7 @@ FProxyToadlet.downloadInBackgroundToDiskButton=Download
 FProxyToadlet.downloadInBackgroundToDisk=Download the file in the background and store in ${dir}. You will be notified when the download completes, and can follow its progress on the ${page}downloads page${/page}.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Fetch
 FProxyToadlet.downloadInBackgroundToTempSpace=Fetch the file in the background. It will be accessible ${bold}only${/bold} through the ${page}downloads page${/page}, and will be lost if you uninstall Freenet, click the panic button, or lose the master password. You will be notified when the fetch completes.
+FProxyToadlet.downloadToDiskWarningNotFiltered=${bold}Warning${/bold}: The file downloaded to disk will not be filtered. Be careful when you open it as it might cause your web browser or other software to breach your anonymity, give away your IP address, or if it is an executable may contain virii, trojans, etc.
 FProxyToadlet.downloadToDiskSecurityWarning=${bold}Warning${/bold}: this will store the file unencrypted on your hard disk, and may present a security risk if you are not using full-disk encryption.
 FProxyToadlet.downloadsTitle=Downloads
 FProxyToadlet.downloads=Files being downloaded from Freenet
