Fix bug #5674: Bogus bind to address -> all interfaces unusable until restart.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -682,7 +682,7 @@ FcpServer.assumeUploadDDAIsAllowedLong=Assume that upload DDA is allowed? if fal
 FcpServer.bindTo=IP address to bind to
 FcpServer.bindToLong=IP address to bind the FCP server to.
 FcpServer.cannotStartOrStopOnTheFly=Cannot start or stop the FCP server on the fly
-FcpServer.couldNotChangeBindTo=Could not change FCP bind address: ${error}.
+FcpServer.couldNotChangeBindTo=Could not change FCP bind address: Some of the IP addresses given could not be bound to: ${failedInterfaces}. Maybe you mis-typed an IP address or a network connection is down?
 FcpServer.enablePersistentDownload=Enable persistent downloads?
 FcpServer.enablePersistentDownloadLong=Whether to enable Persistence=forever for FCP requests. Meaning whether to support requests which persist over node restarts; they must be written to disk and this may constitute a security risk for some people.
 FcpServer.isEnabled=Enable FCP?
@@ -1743,7 +1743,7 @@ SimpleToadletServer.allowedHostsLong=May be a comma-separated list of single IPs
 SimpleToadletServer.bindTo=IP address to bind to
 SimpleToadletServer.bindToLong=IP address to bind to
 SimpleToadletServer.cannotChangePortOnTheFly=Cannot change web interface port number on the fly
-SimpleToadletServer.couldNotChangeBindTo=Could not change web interface bind address: ${error}.
+SimpleToadletServer.couldNotChangeBindTo=Could not change web interface bind address: Some of the IP addresses given could not be bound to: ${failedInterfaces}. Maybe you mis-typed an IP address or a network connection is down?
 SimpleToadletServer.cssName=Web interface theme
 SimpleToadletServer.cssNameLong=Select a theme for the Freenet web interface
 SimpleToadletServer.cssOverride=Override the CSS with a custom one (WARNING!)
