Remove finished uploads
Added a button to remove all finished uploads from the upload pane in
one go as a fix to the bug
https://bugs.freenetproject.org/view.php?id=1969

--- a/src/freenet/l10n/freenet.l10n.da.properties
+++ b/src/freenet/l10n/freenet.l10n.da.properties
@@ -71,6 +71,7 @@ NodeIPDectector.ipOverride=Overstyring af IP adresse
 NodeIPDectector.ipOverrideLong=IP adresse overstyring (normalt ikke nødvendigt) - sæt kun hvis du har en *statisk* IP adresse eller et domæne navn (f.eks. via dyndns), og du er bag en firewall.
 NodeIPDectector.tempAddressHint=Midlertidigt IP adresse hint
 NodeIPDectector.tempAddressHintLong=Midlertidigt hint om hvad din IP adresse kan være; bliver slettet efter brug
+QueueToadlet.removeFinishedUploads=Fjern færdige uploads
 StatisticsToadlet.allocMemory=Allokeret Java hukommelse: ${memory}
 StatisticsToadlet.bandwidthTitle=Båndbredte
 StatisticsToadlet.cpus=Tilgængelige Processorer: ${count}
