--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1597,6 +1597,7 @@ QueueToadlet.recommendToFriends=Freunden empfehlen
 QueueToadlet.remove=Entfernen aus der Liste
 QueueToadlet.removeFilesFromList=LÖSCHEN aus der Liste
 QueueToadlet.removeFinishedDownloads=Fertige Downloads entfernen
+QueueToadlet.removeFinishedUploads=Fertige uploads entfernen
 QueueToadlet.requestNavigation=Anfragen - Menü und Überblick
 QueueToadlet.restart=Neustart
 QueueToadlet.restartDownloads=Neustart von Downloads
