--- a/src/freenet/l10n/freenet.l10n.es.properties
+++ b/src/freenet/l10n/freenet.l10n.es.properties
@@ -1320,6 +1320,7 @@ QueueToadlet.recommendToFriends=Recomendar a amigos
 QueueToadlet.remove=Eliminar
 QueueToadlet.removeFilesFromList=Eliminar archivos de la lista
 QueueToadlet.removeFinishedDownloads=Eliminar descargas finalizadas
+QueueToadlet.removeFinishedUploads=Eliminar archivos terminados
 QueueToadlet.requestNavigation=Navegación de la petición
 QueueToadlet.restart=Reiniciar
 QueueToadlet.restartDownloads=Reiniciar descargas
