--- a/src/freenet/l10n/freenet.l10n.fi.properties
+++ b/src/freenet/l10n/freenet.l10n.fi.properties
@@ -694,6 +694,7 @@ QueueToadlet.priority6=ei tule valmistumaan
 QueueToadlet.progress=Edistyminen
 QueueToadlet.reason=Syy
 QueueToadlet.remove=Poista
+QueueToadlet.removeFinishedUploads=Poista valmiit kuvat
 QueueToadlet.requestNavigation=Pyyntövalikko
 QueueToadlet.restart=Uudelleenkäynnistä
 QueueToadlet.size=Koko
