--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -1338,6 +1338,7 @@ QueueToadlet.recommendToFriends=Recommander aux amis
 QueueToadlet.remove=Supprimer
 QueueToadlet.removeFilesFromList=Supprimer les fichiers de la liste
 QueueToadlet.removeFinishedDownloads=Enlever les téléchargements terminés
+QueueToadlet.removeFinishedUploads=Retirer ajouts finis
 QueueToadlet.requestNavigation=Parcours des requètes
 QueueToadlet.restart=Redémarrer
 QueueToadlet.restartDownloads=Redémarrer les téléchargements
