--- a/src/freenet/l10n/freenet.l10n.it.properties
+++ b/src/freenet/l10n/freenet.l10n.it.properties
@@ -1413,6 +1413,7 @@ QueueToadlet.recommendFilesToFriends=Raccomanda dei file agli amici
 QueueToadlet.recommendToFriends=Raccomanda ad amici
 QueueToadlet.remove=Elimina
 QueueToadlet.removeFilesFromList=Elimina i file dall'elenco
+QueueToadlet.removeFinishedUploads=Rimuovere arrivi finiti
 QueueToadlet.requestNavigation=Esplora Richieste
 QueueToadlet.restart=Riavvia
 QueueToadlet.restartDownloads=Riavvia i download
