--- a/src/freenet/l10n/freenet.l10n.ja.properties
+++ b/src/freenet/l10n/freenet.l10n.ja.properties
@@ -781,6 +781,7 @@ QueueToadlet.priority5=低低
 QueueToadlet.priority6=一時停止中
 QueueToadlet.reason=理由
 QueueToadlet.removeFinishedDownloads=完了したダウンロードを消去する
+QueueToadlet.removeFinishedUploads=完成したアップロードを削除
 QueueToadlet.siteUploadSucceeded=あなたのFreeSite: ${filename} (${files} ファイル, ${size} 総容量) はFreenetにうまくアップロードされました。 ${link}ここ${/link}をクリックするとサイトのホームページへ移動します。
 SSL.enable=SSLサポートを有効にしますか?
 SSL.enableLong=SSLサポートを有効にしますか?
