--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -1445,6 +1445,7 @@ QueueToadlet.recommendToFriends=Aanbevelen aan Vrienden
 QueueToadlet.remove=Verwijderen uit lijst
 QueueToadlet.removeFilesFromList=Verwijder bestanden uit overzicht
 QueueToadlet.removeFinishedDownloads=Verwijder voltooide downloads
+QueueToadlet.removeFinishedUploads=Verwijder voltooide uploads
 QueueToadlet.requestNavigation=Navigatie door verzoeken en totalen
 QueueToadlet.restart=Opnieuw starten
 QueueToadlet.restartDownloads=Herstart downloads
