--- a/src/freenet/l10n/freenet.l10n.no.properties
+++ b/src/freenet/l10n/freenet.l10n.no.properties
@@ -582,6 +582,7 @@ QueueToadlet.progress=Fremgang
 QueueToadlet.progressbarAccurate=Denne fremgangsverdien er nøyaktig
 QueueToadlet.reason=Grunn
 QueueToadlet.remove=Fjern
+QueueToadlet.removeFinishedUploads=Fjern ferdige opplastninger
 QueueToadlet.restart=Start på nytt
 QueueToadlet.size=Størrelse
 QueueToadlet.starting=STARTER
