--- a/src/freenet/l10n/freenet.l10n.pl.properties
+++ b/src/freenet/l10n/freenet.l10n.pl.properties
@@ -182,6 +182,7 @@ QueueToadlet.reason=Powód
 QueueToadlet.recommendFilesToFriends=Zaproponuj plik przyjacielowi
 QueueToadlet.removeFilesFromList=Usuń pliki z listy
 QueueToadlet.removeFinishedDownloads=Usuń zakończone pobierania
+QueueToadlet.removeFinishedUploads=Usuń gotowych dodane
 QueueToadlet.titleUploads=Wysyłania
 QueueToadlet.totalQueuedDownloads=Całkowita kolejka pobierań: ${size}
 QueueToadlet.totalQueuedUploads=Całkowita kolejka wysyłania: ${size}
