--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -1601,6 +1601,7 @@ QueueToadlet.recommendToFriends=Предложить файл друзьям
 QueueToadlet.remove=Удалить из списка
 QueueToadlet.removeFilesFromList=Убрать файлы из списка
 QueueToadlet.removeFinishedDownloads=Убрать завершенные загрузки
+QueueToadlet.removeFinishedUploads=Удалить готовой добавления
 QueueToadlet.requestNavigation=Статистика
 QueueToadlet.restart=Перезапуск
 QueueToadlet.restartDownloads=Перезапустить
