--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -814,6 +814,7 @@ QueueToadlet.recommendDescription=Beskrivning av filen:
 QueueToadlet.recommendToFriends=Rekommendera till vänner
 QueueToadlet.remove=Ta bort
 QueueToadlet.removeFilesFromList=Ta bort filer från listan
+QueueToadlet.removeFinishedUploads=Ta bort färdiga uppladdningar
 QueueToadlet.requestNavigation=Navigation
 QueueToadlet.restart=Omstart
 QueueToadlet.returnToQueuePage=Återvänd till ${link}kösidan${/link}.
