--- a/src/freenet/l10n/freenet.l10n.zh-cn.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-cn.properties
@@ -1319,6 +1319,7 @@ QueueToadlet.recommendFilesToFriends=向好友推荐文件
 QueueToadlet.recommendToFriends=推荐给好友
 QueueToadlet.remove=从列表中移除
 QueueToadlet.removeFilesFromList=从列表中移除文件
+QueueToadlet.removeFinishedUploads=删除成品上传
 QueueToadlet.requestNavigation=统计摘要
 QueueToadlet.restart=重新开始
 QueueToadlet.restartDownloads=重新开始下载
