--- a/src/freenet/l10n/freenet.l10n.zh-tw.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-tw.properties
@@ -1043,6 +1043,7 @@ QueueToadlet.recommend=推薦
 QueueToadlet.recommendAFileToFriends=推薦檔案給朋友
 QueueToadlet.recommendToFriends=推薦給朋友
 QueueToadlet.remove=移除
+QueueToadlet.removeFinishedUploads=刪除成品上傳
 QueueToadlet.requestNavigation=需求總覽
 QueueToadlet.restart=重啟
 QueueToadlet.siteUploadSucceeded=你的 freesite ${filename} (${files} 個檔案, 總計大小為 ${size}) 已經成功上傳至 Freenet 了. ${link}按這裡${/link}來開啟該網站首頁.
