--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1580,6 +1580,7 @@ QueueToadlet.reason=Reason
 QueueToadlet.remove=Remove from list
 QueueToadlet.removeFilesFromList=Remove files from list
 QueueToadlet.removeFinishedDownloads=Remove finished Downloads
+QueueToadlet.removeFinishedUploads=Remove finished uploads
 QueueToadlet.requestNavigation=Request Navigation and Totals
 QueueToadlet.restart=Restart
 QueueToadlet.restartDownloads=Restart downloads
