Description Strings for new bookmarks (English only)

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -95,12 +95,15 @@ BookmarkManager.list=List of bookmarks
 BookmarkManager.listLong=A list of bookmarked freesites
 BookmarkManager.malformedBookmark=Malformed Bookmark
 Bookmarks.Defaults.Name.categoryIndexes=Directories of websites on Freenet
-Bookmarks.Defaults.Name.categorySoftware=Freenet related software and documentation
+Bookmarks.Defaults.Name.categoryDocs=Freenet documentation
+Bookmarks.Defaults.Name.categorySoftware=Freenet related software
 Bookmarks.Defaults.Name.categoryBlogs=Freenet team's blogs
 Bookmarks.Defaults.Description.TUFI=A one-page index with a menu including categories
 Bookmarks.Defaults.Description.AFK=An index of freenet sites with categories
 Bookmarks.Defaults.Description.Linkageddon=A large, regularly updated index, linking to absolutely everything. Some sites may not have accurate descriptions. Be careful!
 Bookmarks.Defaults.Description.ISF=A small French index with descriptions
+Bookmarks.Defaults.Description.Nerd=Linkageddon fork with offensive stuff removed
+Bookmarks.Defaults.Description.Enzo=Categorised index of Freenet sites (no cp)
 Bookmarks.Defaults.Description.FMS=The official freesite of FMS, a spam resistant message board system for Freenet
 Bookmarks.Defaults.Description.Freemail=The official site for Freemail - email over Freenet
 Bookmarks.Defaults.Description.Publish=Simple guide to publishing web sites to Freenet
@@ -108,7 +111,11 @@ Bookmarks.Defaults.Description.FreesiteHOWTO=A more detailed explanation of publ
 Bookmarks.Defaults.Description.Sone=Fast anonymous social chat over Freenet
 Bookmarks.Defaults.Description.freenetdocwiki=A Wiki about Freenet (needs some tools to edit)
 Bookmarks.Defaults.Description.FSNG=An illustrated guide to setting up social networking tools
+Bookmarks.Defaults.Description.FNPSS=Information of Protecting your privacy and software useful with Freenet
 Bookmarks.Defaults.Description.jSite=Tool for uploading freesites (Freenet websites)
+Bookmarks.Defaults.Description.ShareWiki=A Freenet plugin for the fast creation of small freesites. It is a modification of ShareLink
+Bookmarks.Defaults.Description.KeepAlive=Will reinsert files to prevent them falling out of the datastore
+Bookmarks.Defaults.Description.FLIP=IRC Server for freenet
 Bookmarks.Defaults.Description.Flog.Toad=Toad's flog
 Bookmarks.Defaults.Description.Flog.Bombe=Bombe's flog
 Bookmarks.Defaults.Description.Flog.Xor=Flog of the main Freetalk & Web Of Trust developer
@@ -116,14 +123,20 @@ Bookmarks.Defaults.ShortDescription.Linkageddon=Links to all Freenet sites, some
 Bookmarks.Defaults.ShortDescription.AFK=Freenet sites sorted by category
 Bookmarks.Defaults.ShortDescription.TUFI=Older Freenet sites
 Bookmarks.Defaults.ShortDescription.ISF=Index of French sites
+Bookmarks.Defaults.ShortDescription.Nerd=Infos for Political Nerds (no porn)
+Bookmarks.Defaults.ShortDescription.Enzo=Freenet sites categorised (no cp)
 Bookmarks.Defaults.ShortDescription.FMS=Message boards over Freenet
 Bookmarks.Defaults.ShortDescription.Freemail=Email over Freenet
 Bookmarks.Defaults.ShortDescription.Publish=How to publish web sites on freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a website to Freenet
 Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
-Bookmarks.Defaults.ShortDescription.FSNG=Social networking
+Bookmarks.Defaults.ShortDescription.FSNG=Setting up Social Networking Under Freenet
+Bookmarks.Defaults.ShortDescription.FNPSS=Has alternative software to the FSNG and Unix installation instructions for FMS
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
+Bookmarks.Defaults.ShortDescription.ShareWiki=Tool for creating small freesites
+Bookmarks.Defaults.ShortDescription.KeepAlive=Plugin for keeping data alive in Freenet
+Bookmarks.Defaults.ShortDescription.FLIP=semi-Realtime Chat software for Freenet
 Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet developer's personal blog
 Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone developer's personal blog
 Bookmarks.Defaults.ShortDescription.Flog.Xor=Freetalk developer's blog
