Forgot The Unofficial Guide to FMS so added it, also bumb Enzo's Index to edition 4.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -112,6 +112,7 @@ Bookmarks.Defaults.Description.Sone=Fast anonymous social chat over Freenet
 Bookmarks.Defaults.Description.freenetdocwiki=A Wiki about Freenet (needs some tools to edit)
 Bookmarks.Defaults.Description.FSNG=An illustrated guide to setting up social networking tools
 Bookmarks.Defaults.Description.FNPSS=Information of Protecting your privacy and software useful with Freenet
+Bookmarks.Defaults.Description.TUGFMS=A description of the FMS Web interface and trust system
 Bookmarks.Defaults.Description.jSite=Tool for uploading freesites (Freenet websites)
 Bookmarks.Defaults.Description.ShareWiki=A Freenet plugin for the fast creation of small freesites. It is a modification of ShareLink
 Bookmarks.Defaults.Description.KeepAlive=Will reinsert files to prevent them falling out of the datastore
@@ -133,6 +134,7 @@ Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
 Bookmarks.Defaults.ShortDescription.FSNG=Setting up Social Networking Under Freenet
 Bookmarks.Defaults.ShortDescription.FNPSS=Has alternative software to the FSNG and Unix installation instructions for FMS
+Bookmarks.Defaults.ShortDescription.TUGFMS=Using the FMS Web interface and trust system
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
 Bookmarks.Defaults.ShortDescription.ShareWiki=Tool for creating small freesites
 Bookmarks.Defaults.ShortDescription.KeepAlive=Plugin for keeping data alive in Freenet
