Add Enzo's Index to default bookmarks.
Add it before Linkageddon because the categories are useful in avoiding
things one does not wish to see, and remove AFKIndex because it is no
longer being updated.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -99,6 +99,7 @@ Bookmarks.Defaults.Name.categorySoftware=Freenet related software and documentat
 Bookmarks.Defaults.Name.categoryBlogs=Freenet team's blogs
 Bookmarks.Defaults.Description.TUFI=A one-page index with a menu including categories
 Bookmarks.Defaults.Description.AFK=An index of freenet sites with categories
+Bookmarks.Defaults.Description.Enzo=An index of Freenet sites with categories
 Bookmarks.Defaults.Description.Linkageddon=A large, regularly updated index, linking to absolutely everything. Some sites may not have accurate descriptions. Be careful!
 Bookmarks.Defaults.Description.ISF=A small French index with descriptions
 Bookmarks.Defaults.Description.FMS=The official freesite of FMS, a spam resistant message board system for Freenet
