Add missing Enzo's Index short description.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -115,6 +115,7 @@ Bookmarks.Defaults.Description.Flog.Bombe=Bombe's flog
 Bookmarks.Defaults.Description.Flog.Xor=Flog of the main Freetalk & Web Of Trust developer
 Bookmarks.Defaults.ShortDescription.Linkageddon=Links to all Freenet sites, some are very offensive, be careful!
 Bookmarks.Defaults.ShortDescription.AFK=Freenet sites sorted by category
+Bookmarks.Defaults.ShortDescription.Enzo=Freenet sites sorted by category
 Bookmarks.Defaults.ShortDescription.TUFI=Older Freenet sites
 Bookmarks.Defaults.ShortDescription.ISF=Index of French sites
 Bookmarks.Defaults.ShortDescription.FMS=Message boards over Freenet
