Make the entropy warning much clearer.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1808,8 +1808,8 @@ SSL.keyPass=Password of private key access
 SSL.keyPassLong=Password of private key access
 SSL.version=Version of SSL
 SSL.versionLong=Version of SSL, SSLv3 or TLSv1 (default SSLv3)
-StartupToadlet.entropyErrorTitle=Not enough entropy is available!
-StartupToadlet.entropyErrorContent=There isn't enough entropy available on your system... Freenet won't start until it can gather enough.
+StartupToadlet.entropyErrorTitle=Freenet is waiting for more entropy before it can start up
+StartupToadlet.entropyErrorContent=Freenet is currently waiting for more entropy (randomness) from your computer. Freenet needs entropy so that it can generate cryptographic keys safely. Freenet will try to gather entropy by reading the disk. See wrapper.log for details.
 StartupToadlet.isStartingUp=Your Freenet node is starting up, please hold on.
 StartupToadlet.title=Freenet is starting up
 StaticToadlet.pathInvalidChars=The given URI contains disallowed characters.
