--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1032,6 +1032,11 @@ Node.enableSwapQueueing=Enable queueing of swap requests? (DO NOT TURN THIS OFF!
 Node.enableSwapQueueingLong=Enable queueing of swap requests? (DO NOT TURN THIS OFF!)
 Node.enableULPRDataPropagation=Enable ULPR data propagation?
 Node.enableULPRDataPropagationLong=Enable fast propagation of recently requested keys to those nodes which have asked for them when the data is eventually found? (Ultra-Lightweight Persistent Requests; this is particularly important for chat clients). Note that this also enables RecentlyFailed, which will squash requests which have recently had 3 DNFs at at least the HTL it is being fetched at now (this is only safe because ULPRs ensure that we will get the key quickly if it is found); this is important to limit the load chat clients put on the Freenet network.
+Node.entropyErrorTitle=Freenet is waiting for more entropy before it can start up
+Node.entropyError=Freenet is currently waiting for more entropy (randomness) from your computer. Freenet needs entropy so that it can generate cryptographic keys safely.
+Node.entropyReadingDisk=Freenet is trying to gather entropy (randomness) by reading the disk...
+Node.entropyLinuxHWRNG=/dev/hwrng exists - have you installed rng-tools?
+Node.entropyLinuxNeedBetterRNG=You should consider installing a better random number generator e.g. haveged.
 Node.errorApplyingConfig=Error while applying the new config : ${error}
 Node.forceBigShrink=Do large store shrinks immediately (bdbje-index store type only)
 Node.forceBigShrinkLong=Whether to do large store shrinks (over 10%) immediately (rather than waiting for the next node restart). Online shrinks do not preserve the most recently used data, so this is not recommended; use it only if you must have an immediate result. Specific to bdbje-index store type.
@@ -1808,8 +1813,7 @@ SSL.keyPass=Password of private key access
 SSL.keyPassLong=Password of private key access
 SSL.version=Version of SSL
 SSL.versionLong=Version of SSL, SSLv3 or TLSv1 (default SSLv3)
-StartupToadlet.entropyErrorTitle=Freenet is waiting for more entropy before it can start up
-StartupToadlet.entropyErrorContent=Freenet is currently waiting for more entropy (randomness) from your computer. Freenet needs entropy so that it can generate cryptographic keys safely. Freenet will try to gather entropy by reading the disk. See wrapper.log for details.
+StartupToadlet.entropyErrorContent=Freenet will try to gather entropy by reading the disk. See wrapper.log for details.
 StartupToadlet.isStartingUp=Your Freenet node is starting up, please hold on.
 StartupToadlet.title=Freenet is starting up
 StaticToadlet.pathInvalidChars=The given URI contains disallowed characters.
