Fix the error message as well.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1047,7 +1047,7 @@ Node.maxHTL=Maximum HTL
 Node.maxHTLLong=Maximum HTL (FOR DEVELOPER USE ONLY!)
 Node.maxOpennetPeers=Maximum number of Opennet peers
 Node.maxOpennetPeersLong=Maximum number of Opennet peers (must be between 0 and ${default} inclusive, the actual limit will depend on the number of Friends and your bandwidth limit, and will be shown on the statistics page).
-Node.maxOpennetPeersMustBeTwentyOrLess=Must be 100 or less
+Node.maxOpennetPeersMustBeTwentyOrLess=Must be ${maxpeers} or less
 Node.mustBePositive=Config value must be positive
 Node.nodeDir=Node-reference directory
 Node.nodeDirLong=Path of directory for node-related information (e.g. node identity, peers).
