--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -884,7 +884,7 @@ Node.masterKeyFileLong=Nom de fichier de clés maître. (master.keys par défaut
 Node.maxHTL=HTL maximum
 Node.maxHTLLong=HTL maximum (RESERVE AUX DEVELOPPEURS !)
 Node.maxOpennetPeers=Nombre maximum de liens Opennet
-Node.maxOpennetPeersLong=Nombre maximum de liens Opennet (doit être compris entre 0 et 20 inclus, les connexions darknet seront soustraites de ce total)
+Node.maxOpennetPeersLong=Nombre maximum de liens Opennet (doit être compris entre 0 et ${default} inclus, les connexions darknet seront soustraites de ce total)
 Node.maxOpennetPeersMustBeTwentyOrLess=Vingt ou moins
 Node.mustBePositive=Cette valeur doit être positive
 Node.nodeDir=Dossier du noeud
