Make database corruption message clearer.
Show correct database path depending on physical security level, and
make it clearer what is a directory and what is a file.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1561,7 +1561,7 @@ QueueToadlet.persistenceNone=none
 QueueToadlet.persistenceReboot=reboot
 QueueToadlet.persistenceBrokenTitle=Download/upload queue database corrupted!
 QueueToadlet.persistenceBrokenShortAlert=Download/upload queue broken due to database corruption! Click for details on how to fix!
-QueueToadlet.persistenceBroken=Your node failed to load the database (node.db4o) which we store persistent downloads and uploads in. This is usually caused by data corruption on disk due to e.g. power failure. The files involved are ${TEMPDIR} and ${DBFILE}. Please shutdown your Freenet node, and either restore them from a backup or delete them. Also check whether you are out of disk space. This message can also occasionally happen while Freenet is shutting down.
+QueueToadlet.persistenceBroken=Freenet failed to load the database in which it stores persistent downloads and uploads. This is usually caused by data corruption on disk due to things like power failure. The problem is in the ${TEMPDIR} directory and ${DBFILE} file. Please shut down Freenet, then either restore them from backup or delete them. Also check whether you are out of disk space. This message sometimes happens harmlessly while Freenet is shutting down.
 QueueToadlet.pleaseEnableFCP=You need to enable the FCP server to access this page
 QueueToadlet.panicButton=PANIC!
 QueueToadlet.priority0=emergency
