Added content filter toadlet, as well as option to test filter from insert file wizard.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -262,6 +262,30 @@ ContentFilter.textHtmlReadAdvice=HTML - not dangerous if filtered
 ContentFilter.textHtmlWriteAdvice=HTML - may contain dangerous metadata etc; suggest you check it by hand
 ContentFilter.textPlainReadAdvice=Plain text - not dangerous unless your browser is stupid (e.g. Internet Explorer)
 ContentFilter.textPlainWriteAdvice=Plain text - not dangerous unless you include compromising information
+ContentFilterToadlet.displayResultLabel=Display the result in the browser
+ContentFilterToadlet.errorBadRequest=The request was invalid.
+ContentFilterToadlet.errorBadRequestTitle=Bad request
+ContentFilterToadlet.errorMustSpecifyFilterOperation=Use READ to apply the read filter. Use WRITE to apply the write filter. Use BOTH to apply them both.
+ContentFilterToadlet.errorMustSpecifyFilterOperationTitle=You must specify what sort of filtering to apply when filtering a file!
+ContentFilterToadlet.errorMustSpecifyResultHandling=Use DISPLAY to view the output in the browser. Use SAVE to download the output to a file.
+ContentFilterToadlet.errorMustSpecifyResultHandlingTitle=You must specify what to do with the result when filtering a file!
+ContentFilterToadlet.errorNoFileOrCannotRead=Freenet cannot read the file "${file}".
+ContentFilterToadlet.errorNoFileOrCannotReadTitle=The file does not exist or it cannot be read
+ContentFilterToadlet.errorNoFileSelected=You did not select a file to filter.
+ContentFilterToadlet.errorNoFileSelectedTitle=No file selected
+ContentFilterToadlet.errorUnsafeContent=The content filter has determined that the file is unsafe to display.
+ContentFilterToadlet.errorUnsafeContentTitle=Unsafe content
+ContentFilterToadlet.filterFile=Test the content filter on a file
+ContentFilterToadlet.filterFileBrowseButton=Browse files
+ContentFilterToadlet.filterFileBrowseLabel=Filter a file from disk
+ContentFilterToadlet.filterFileFilterLabel=Filter File
+ContentFilterToadlet.filterFileUploadLabel=Or filter a file through the browser
+ContentFilterToadlet.mimeTypeLabel=Treat the file as this MIME type
+ContentFilterToadlet.mimeTypeText=Leave this blank to let Freenet auto-detect the MIME type.
+ContentFilterToadlet.pageTitle=Test the Content Filter
+ContentFilterToadlet.saveResultLabel=Save the result to disk
+ContentFilterToadlet.selectFile=Filter
+ContentFilterToadlet.tryAgainFilterFilePage=${link}Try again${/link} to filter a file.
 DarknetAddRefToadlet.title=Connect to a Friend
 DarknetAddRefToadlet.explainBoxTitle=Why you should connect to your friends running Freenet
 DarknetAddRefToadlet.explainBox1=You can improve Freenet's security by connecting to your friends. That is, to people you actually know who also run Freenet. These can be online acquaintances, but do not add connections to total strangers, as adding strangers as Friends will not improve security much and will cause problems for the network as a whole if lots of people do it. When you have added enough Friends, so that at least 5 are online at all times, you can increase your network security level to HIGH, and only connect to Friends, which is called "darknet mode". This makes it much harder for an attacker to even find out that you are running Freenet, and makes most attacks against your anonymity much harder. Freenet will make encrypted connections to your friends directly over the Internet, so only add people you can already be easily connected to (family, coworkers, real life friends, online friends).
@@ -422,6 +446,7 @@ DownloadFeedUserAlert.delete=Delete
 DownloadFeedUserAlert.fileDescription=Description:
 DownloadFeedUserAlert.fileURI=URI:
 DownloadFeedUserAlert.title=${from} recommends you a file
+FileInsertWizardToadlet.filterFileLabel=You can run the content filter in advance to see what the uploaded file will look like:
 FileInsertWizardToadlet.insertCanonicalTitle=Insert a canonical key
 FileInsertWizardToadlet.insertCanonical=This will always produce the same key for the same file, so is convenient for filesharing. However, if the bad guys can predict what files you are going to insert, they may be able to use this to trace you a lot more easily.
 FileInsertWizardToadlet.insertIntro=There are several different ways to upload (insert) a file to Freenet depending on whether you have uploaded the file before and what your security requirements are:
@@ -612,6 +637,8 @@ FProxyToadlet.fetchLargeFileAnywayAndDisplay=Open the file in the browser. This 
 FProxyToadlet.fetchLargeFileAnywayAndDisplayButton=Display
 FProxyToadlet.fileInformationTitle=File Information
 FProxyToadlet.filenameLabel=Filename:
+FProxyToadlet.filterFile=Run a file through the content filter
+FProxyToadlet.filterFileTitle=Filter a file
 FProxyToadlet.filterData=Filter data:
 FProxyToadlet.filterDataMessage=Select this to run your request through the content filter. The filter will try to prevent your computer from running anything which might harm it, or break your anonymity. Keeping this checked is strongly recommended.
 FProxyToadlet.friends=Connections to your friends' nodes
